成功完成第一次抽奖逻辑